# poggers

./: .gitignore  .npmrc  .oxfmtrc.json  .oxlintrc.json  CHANGELOG.md  README.md  mise.toml  package.json  tsconfig.json  turbo.json  vitest.config.ts
changes/: README.md  core-cleanup.md  incremental-system-revisions.md  kit-package-name.md  system-workspaces.md
docs/: api.json  app-conventions-pwa-plan.md  app-framework-plan.md  architecture-migration.md  architecture.md  automatic-component-parts-plan.md  bun-hmr-plan.md  compatibility.md  component-api-plan.md  component-api.md  component-instance-bindings-plan.md  environment-programs-ui-plan.md  feature-capability-refactor.md  features.md  ideal-development-experience.md  kit-organization-plan.md  monorepo-apps-store-plan.md  native-production-plan.md  native-runtime-correction.md  platform-adapter-falsification-plan.md  platform-adapter-falsification-report.md  platform-adapter-migration-plan.md  platform-presentation-foundation-plan.md  portable-product-runtime-plan.md  portable-typescript.md  presentation-pipeline-plan.md  (+29 more)
src/adapters/server/native/: Cargo.toml  capabilities.ts  domain.ts  program.ts  runtime.ts
src/adapters/server/native/capabilities/authentication/: Cargo.toml
src/adapters/server/native/capabilities/authentication/src/: lib.rs
src/adapters/server/native/capabilities/clock/: Cargo.toml
src/adapters/server/native/capabilities/clock/src/: lib.rs
src/adapters/server/native/capabilities/events/: Cargo.toml
src/adapters/server/native/capabilities/events-jetstream/: Cargo.toml
src/adapters/server/native/capabilities/events-jetstream/src/: lib.rs
src/adapters/server/native/capabilities/events/src/: lib.rs
src/adapters/server/native/capabilities/http/: Cargo.toml
src/adapters/server/native/capabilities/http/src/: document.rs  lib.rs
src/adapters/server/native/capabilities/identifiers/: Cargo.toml
src/adapters/server/native/capabilities/identifiers/src/: lib.rs
src/adapters/server/native/fixtures/recorder/: Cargo.toml
src/adapters/server/native/fixtures/recorder/src/: lib.rs
src/adapters/server/native/runtime/: Cargo.toml
src/adapters/server/native/runtime/src/: lib.rs
src/adapters/server/native/src/: lib.rs
src/adapters/server/production/dependencies/http/: Cargo.toml
src/adapters/server/production/dependencies/http/src/: document.rs  lib.rs
(+466 files in other folders)
