[package]
name = "poggers_server_runtime"
version = "0.0.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-stream = "0.3.6"
axum = "0.8.9"
bytes = "1.10.1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["net", "signal", "sync"] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
uuid = { version = "1.18.1", features = ["v4"] }
