[package]
name = "poggers-native-authentication"
version = "0.0.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
poggers-native-runtime = { path = "../../runtime" }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt"] }
