[package]
name = "poggers-native-events"
version = "0.0.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
poggers-native-runtime = { path = "../../runtime" }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt", "sync"] }
