[package]
name = "poggers-native-http"
version = "0.0.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
axum = "0.8.9"
bytes = "1.10.1"
mime_guess = "2.0.5"
poggers-native-runtime = { path = "../../runtime" }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["fs", "net", "sync"] }
url = "2.5.7"
