[package]
name = "poggers-server-http"
version = "0.0.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
axum = "0.8.9"
bytes = "1.10.1"
mime_guess = "2.0.5"
percent-encoding = "2.3.2"
poggers-server-runtime = { path = "../../runtime" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["fs", "net", "sync", "time"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["catch-panic", "limit", "request-id", "timeout"] }
url = "2.5.7"
